webpack, typescript, react all together

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "basic portfolio page",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "bundle": "webpack",
+    "serve": "webpack && http-server -i index.html"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,17 @@
   "bugs": {
     "url": "https://github.com/darkdigitaldream/portfolio/issues"
   },
-  "homepage": "https://github.com/darkdigitaldream/portfolio#readme"
+  "homepage": "https://github.com/darkdigitaldream/portfolio#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "3.2.3",
+    "source-map-loader": "0.2.1",
+    "typescript": "2.5.2",
+    "webpack": "3.6.0"
+  },
+  "dependencies": {
+    "@types/react": "16.0.5",
+    "@types/react-dom": "15.5.4",
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
+  }
 }
