--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
   "dependencies": {
     "@types/react": "16.0.5",
     "@types/react-dom": "15.5.4",
-    "flexboxgrid": "^6.3.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
-    "react-redux": "5.0.6"
+    "react-flexbox-grid": "1.1.5",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   }
 }
