--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "test",
     "bundle": "webpack",
-    "serve": "webpack && cp -r ./src/data ./dist/ && http-server -i index.html"
+    "assetBundle": "cp -r ./src/data ./dist/",
+    "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
+    "serve": "npm run lint && npm run bundle && npm run assetBundle && cat ./tslint.err && http-server -i index.html"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,7 @@
     "sass-loader": "6.0.6",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
+    "tslint": "^5.7.0",
     "typescript": "2.5.2",
     "uglifyjs-webpack-plugin": "0.4.6",
     "webpack": "3.6.0"
