--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "16.0.5",
     "@types/react-dom": "15.5.4",
     "@types/react-redux": "5.0.9",
+    "@types/winston": "2.3.6",
     "awesome-typescript-loader": "3.2.3",
     "css-loader": "0.28.7",
     "http-server": "0.10.0",
@@ -32,7 +33,7 @@
     "sass-loader": "6.0.6",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
-    "tslint": "^5.7.0",
+    "tslint": "5.7.0",
     "typescript": "2.5.2",
     "uglifyjs-webpack-plugin": "0.4.6",
     "webpack": "3.6.0"
@@ -43,6 +44,7 @@
     "react-flexbox-grid": "1.1.5",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "2.2.0",
+    "winston": "2.3.1"
   }
 }
