--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bundle": "webpack && npm run assetBundle && cp ./index.html ./dist",
     "assetBundle": "cp -r ./src/testData ./dist/",
     "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
-    "serve": "npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js"
+    "serve": "npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js --no-inline"
   },
   "repository": {
     "type": "git",
