--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "homepage": "https://github.com/darkdigitaldream/frontendBoilerplate#readme",
   "devDependencies": {
+    "@types/bunyan": "^1.8.3",
     "@types/es6-promise": "0.0.33",
     "@types/react": "16.0.5",
     "@types/react-dom": "15.5.4",
     "@types/react-redux": "5.0.9",
-    "@types/winston": "2.3.6",
     "awesome-typescript-loader": "3.2.3",
     "css-loader": "0.28.7",
     "node-sass": "4.5.3",
@@ -39,12 +39,14 @@
     "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
+    "bunyan": "^1.8.12",
+    "console": "^0.5.2",
+    "console-stream": "^0.1.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-flexbox-grid": "1.1.5",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
-    "redux-thunk": "2.2.0",
-    "winston": "2.3.1"
+    "redux-thunk": "2.2.0"
   }
 }
