--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/darkdigitaldream/frontendBoilerplate#readme",
   "devDependencies": {
-    "@types/bunyan": "^1.8.3",
     "@types/es6-promise": "0.0.33",
     "@types/react": "16.0.5",
     "@types/react-dom": "15.5.4",
@@ -39,9 +38,7 @@
     "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
-    "bunyan": "^1.8.12",
-    "console": "^0.5.2",
-    "console-stream": "^0.1.1",
+    "browser-bunyan": "^0.4.0",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-flexbox-grid": "1.1.5",
