--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "devDependencies": {
     "@types/browser-bunyan": "^0.4.3",
     "@types/es6-promise": "0.0.33",
+    "@types/history": "^4.6.1",
     "@types/node": "^8.0.46",
     "@types/react": "16.0.5",
     "@types/react-dom": "15.5.4",
     "@types/react-redux": "5.0.9",
+    "@types/react-router": "^4.0.16",
+    "@types/react-router-dom": "^4.2.0",
+    "@types/react-router-redux": "^5.0.0",
     "awesome-typescript-loader": "3.2.3",
     "css-loader": "0.28.7",
     "node-sass": "4.5.3",
@@ -41,11 +45,15 @@
   },
   "dependencies": {
     "browser-bunyan": "^0.4.0",
+    "history": "^4.7.2",
     "path": "^0.12.7",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-flexbox-grid": "1.1.5",
     "react-redux": "5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.4",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0"
   }
