--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "bundle": "webpack && npm run assetBundle && cp ./index.html ./dist",
+    "bundle": "webpack && npm run assetBundle && cp ./index.html ./dist && cp -r ./src/images ./dist/",
+    "clean": "rm -rf ./dist",
     "assetBundle": "cp -r ./src/testData ./dist/",
     "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
-    "serve": "npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js --no-inline"
+    "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js --no-inline"
   },
   "repository": {
     "type": "git",
