--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/react-router-redux": "^5.0.0",
     "awesome-typescript-loader": "3.2.3",
     "css-loader": "0.28.7",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "node-sass": "4.5.3",
     "sass-loader": "6.0.6",
     "source-map-loader": "0.2.1",
@@ -41,6 +43,7 @@
     "tslint": "5.7.0",
     "typescript": "2.5.2",
     "uglifyjs-webpack-plugin": "0.4.6",
+    "url-loader": "^0.6.2",
     "webpack": "3.6.0",
     "webpack-dev-server": "^2.9.3"
   },
