--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
     "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js --no-inline",
     "heroku-postbuild": "npm run build",
-    "build": "npm run clean && npm run lint && npm run bundle",
+    "build": "npm run clean && npm run bundle",
     "start": "node ./dist/src/index.js"
   },
   "repository": {
