--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "typescript": "2.5.2",
     "uglifyjs-webpack-plugin": "0.4.6",
     "url-loader": "^0.6.2",
-    "webpack": "3.6.0",
+
     "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
@@ -62,6 +62,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "3.7.2",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "webpack": "3.6.0"
   }
 }
