--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "tslint": "5.7.0",
     "typescript": "2.5.2",
     "uglifyjs-webpack-plugin": "0.4.6",
-    "url-loader": "^0.6.2",
-
+    "url-loader": "^0.6.2"
   },
   "dependencies": {
     "@types/browser-bunyan": "^0.4.3",
