--- a/package.json
+++ b/package.json
@@ -25,18 +25,6 @@
   },
   "homepage": "https://github.com/darkdigitaldream/frontendBoilerplate#readme",
   "devDependencies": {
-    "awesome-typescript-loader": "3.2.3",
-    "css-loader": "0.28.7",
-    "file-loader": "^1.1.5",
-    "font-awesome": "^4.7.0",
-    "node-sass": "4.5.3",
-    "sass-loader": "6.0.6",
-    "source-map-loader": "0.2.1",
-    "style-loader": "0.18.2",
-    "tslint": "5.7.0",
-    "typescript": "2.5.2",
-    "uglifyjs-webpack-plugin": "0.4.6",
-    "url-loader": "^0.6.2"
   },
   "dependencies": {
     "@types/browser-bunyan": "^0.4.3",
@@ -49,8 +37,13 @@
     "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.2.0",
     "@types/react-router-redux": "^5.0.0",
+    "awesome-typescript-loader": "3.2.3",
     "browser-bunyan": "^0.4.0",
+    "css-loader": "0.28.7",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "node-sass": "4.5.3",
     "path": "^0.12.7",
     "react": "15.6.1",
     "react-dom": "15.6.1",
@@ -61,6 +54,13 @@
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
+    "sass-loader": "6.0.6",
+    "source-map-loader": "0.2.1",
+    "style-loader": "0.18.2",
+    "tslint": "5.7.0",
+    "typescript": "2.5.2",
+    "uglifyjs-webpack-plugin": "0.4.6",
+    "url-loader": "^0.6.2",
     "webpack": "3.6.0",
     "webpack-dev-server": "^2.9.3"
   }
