--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js --no-inline",
     "heroku-postbuild": "npm run bundle",
     "build": "npm run clean && npm run bundle",
-    "start": "node ./dist/src/index.js"
+    "start": "node ./dist/bundle.js"
   },
   "repository": {
     "type": "git",
