--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test",
     "bundle": "webpack && npm run assetBundle",
     "clean": "rm -rf ./dist",
-    "assetBundle": "cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/",
+    "assetBundle": "cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/ && cp ./src/images/favicon.ico ./dist",
     "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
     "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js --no-inline",
     "heroku-postbuild": "npm run bundle",
