--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "assetBundle": "cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/ && cp ./src/images/favicon.ico ./dist",
     "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
     "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist/bundle.js --no-inline",
-    "start": "npm run clean && npm run bundle"
+    "start": "npm run serve"
   },
   "repository": {
     "type": "git",
