--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf ./dist",
     "assetBundle": "cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/ && cp ./src/images/favicon.ico ./dist",
     "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
-    "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --content-base ./dist --no-inline",
+    "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --no-inline",
     "start": "npm run serve"
   },
   "repository": {
