--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "test",
     "bundle": "webpack && npm run assetBundle",
     "clean": "rm -rf ./dist",
-    "assetBundle": "cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/ && cp ./src/images/favicon.ico ./dist",
+    "assetBundle": "cp ./server.js ./dist/ && cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/ && cp ./src/images/favicon.ico ./dist",
     "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
-    "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && webpack-dev-server --no-inline",
+    "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && node ./dist/server.js",
     "start": "npm run serve"
   },
   "repository": {
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/browser-bunyan": "^0.4.3",
     "@types/es6-promise": "0.0.33",
+    "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
     "@types/node": "^8.0.46",
     "@types/react": "16.0.5",
@@ -34,9 +35,11 @@
     "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.2.0",
     "@types/react-router-redux": "^5.0.0",
+    "@types/webpack": "^3.8.1",
     "awesome-typescript-loader": "3.2.3",
     "browser-bunyan": "^0.4.0",
     "css-loader": "0.28.7",
+    "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
@@ -59,8 +62,6 @@
     "typescript": "2.5.2",
     "uglifyjs-webpack-plugin": "0.4.6",
     "url-loader": "^0.6.2",
-    "webpack": "3.6.0",
-    "webpack-dev-server": "^2.9.3"
-
+    "webpack": "3.6.0"
   }
 }
