--- a/package.json
+++ b/package.json
@@ -29,39 +29,39 @@
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
     "@types/node": "^8.0.46",
-    "@types/react": "16.0.5",
-    "@types/react-dom": "15.5.4",
-    "@types/react-redux": "5.0.9",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^15.5.4",
+    "@types/react-redux": "^5.0.9",
     "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.2.0",
     "@types/react-router-redux": "^5.0.0",
     "@types/webpack": "^3.8.1",
-    "awesome-typescript-loader": "3.2.3",
-    "browser-bunyan": "^0.4.0",
+    "awesome-typescript-loader": "^3.2.3",
+    "browser-bunyan": "^1.2.1",
     "css-loader": "0.28.7",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.5.3",
     "path": "^0.12.7",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-flexbox-grid": "1.1.5",
-    "react-redux": "5.0.6",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-flexbox-grid": "^1.1.5",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "2.2.0",
-    "sass-loader": "6.0.6",
-    "source-map-loader": "0.2.1",
-    "style-loader": "0.18.2",
-    "tslint": "5.7.0",
-    "typescript": "2.5.2",
-    "uglifyjs-webpack-plugin": "0.4.6",
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
+    "tslint": "^5.7.0",
+    "typescript": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.6.2",
-    "webpack": "3.6.0"
+    "webpack": "^3.6.0"
   }
 }
