--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "basic blank project setup. Hopefully saves you time configuring",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "nyc --extension .ts --extension .tsx mocha -r ts-node/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls",
     "bundle": "webpack && npm run assetBundle",
     "clean": "rm -rf ./dist",
     "assetBundle": "cp ./server.js ./dist/ && cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/ && cp ./src/images/favicon.ico ./dist",
@@ -22,7 +22,13 @@
     "url": "https://github.com/darkdigitaldream/frontendBoilerplate/issues"
   },
   "homepage": "https://github.com/darkdigitaldream/frontendBoilerplate#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "coveralls": "^3.0.0",
+    "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
+    "mocha-typescript": "^1.1.12",
+    "nyc": "^11.3.0"  
+  },
   "dependencies": {
     "@types/browser-bunyan": "^0.4.3",
     "@types/es6-promise": "0.0.33",
@@ -58,6 +64,7 @@
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.19.1",
+    "ts-node": "^4.0.2",
     "tslint": "^5.7.0",
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.4",
