--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "mocha-typescript": "^1.1.12",
-    "nyc": "^11.3.0"  
+    "nyc": "^11.3.0"
   },
   "dependencies": {
     "@types/browser-bunyan": "^0.4.3",
@@ -44,6 +44,7 @@
     "@types/webpack": "^3.8.1",
     "awesome-typescript-loader": "^3.2.3",
     "browser-bunyan": "^1.2.1",
+    "compression-webpack-plugin": "^1.1.3",
     "css-loader": "0.28.7",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
