--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.9",
-    "@types/react-router": "^4.0.16",
+    "@types/react-router": "4.0.16",
     "@types/react-router-dom": "^4.2.0",
     "@types/react-router-redux": "^5.0.0",
     "@types/webpack": "^3.8.1",
@@ -56,7 +56,7 @@
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "react-router": "4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "3.7.2",
@@ -65,6 +65,7 @@
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.19.1",
+    "swagger-ui": "^3.10.0",
     "ts-node": "^4.0.2",
     "tslint": "^5.7.0",
     "typescript": "^2.6.2",
