--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "frontendBoilerplate",
+  "name": "frontend_boilerplate",
   "version": "0.0.0",
   "description": "basic blank project setup. Hopefully saves you time configuring",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --extension .ts --extension .tsx mocha -r ts-node/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls",
     "bundle": "webpack && npm run assetBundle",
     "clean": "rimraf ./dist",
     "assetBundle": "copyfiles ./server.js ./dist/ && copyfiles -r ./src/testData ./dist/ && copyfiles ./index.html ./dist && copyfiles -r ./src/images ./dist/ && copyfiles ./src/images/favicon.ico ./dist",
     "lint": "tslint --force 'src/**/*.ts?'",
     "serve": "npm run clean && npm run bundle && npm run lint && node ./dist/server.js",
-    "start": "npm run serve"
+    "start": "npm run serve",
+    "test": "set NODE_ENV=TEST && nyc --extension .ts --extension .tsx mocha -r ts-node/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls"
   },
   "repository": {
     "type": "git",
@@ -70,7 +70,7 @@
     "swagger-ui": "^3.10.0",
     "ts-node": "^4.0.2",
     "tslint": "^5.7.0",
-    "typescript": "^2.6.2",
+    "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.1.4",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0"
