--- a/package.json
+++ b/package.json
@@ -23,40 +23,39 @@
   },
   "homepage": "https://github.com/darkdigitaldream/frontendBoilerplate#readme",
   "devDependencies": {
-    "copyfiles": "^1.2.0",
+    "copyfiles": "^2.0.0",
     "coveralls": "^3.0.0",
-    "mocha": "^4.0.1",
+    "mocha": "^5.0.5",
     "mocha-lcov-reporter": "^1.3.0",
     "mocha-typescript": "^1.1.12",
     "nyc": "^11.3.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "webpack-cli": "^2.0.14"
   },
   "dependencies": {
     "@types/browser-bunyan": "^0.4.3",
-    "@types/es6-promise": "0.0.33",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
-    "@types/node": "^8.0.46",
+    "@types/node": "^9.6.1",
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.9",
-    "@types/react-router": "4.0.16",
+    "@types/react-router": "4.0.23",
     "@types/react-router-dom": "^4.2.0",
     "@types/react-router-redux": "^5.0.0",
-    "@types/webpack": "^3.8.1",
-    "awesome-typescript-loader": "^3.2.3",
+    "@types/webpack": "^4.1.3",
+    "awesome-typescript-loader": "^4.0.1",
     "browser-bunyan": "^1.2.1",
     "compression-webpack-plugin": "^1.1.3",
-    "css-loader": "0.28.7",
+    "css-loader": "0.28.11",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
-    "node-sass": "4.5.3",
+    "node-sass": "4.8.3",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-flexbox-grid": "^2.0.0",
     "react-redux": "^5.0.6",
     "react-router": "4.2.0",
     "react-router-dom": "^4.2.2",
@@ -66,13 +65,13 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.20.3",
     "swagger-ui": "^3.10.0",
-    "ts-node": "^4.0.2",
+    "ts-node": "^5.0.1",
     "tslint": "^5.7.0",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.1.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.6.0"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0"
   }
 }
