--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint --force 'src/**/*.ts?'",
     "serve": "npm run clean && npm run bundle && npm run lint && node ./dist/server.js",
     "start": "npm run serve",
-    "test": "set NODE_ENV=TEST && nyc --extension .ts --extension .tsx mocha -r ts-node/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls"
+    "test": "set NODE_ENV=TEST && nyc --extension .ts --extension .tsx mocha --require ts-node/register --require jsdom-global/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
   "devDependencies": {
     "copyfiles": "^2.0.0",
     "coveralls": "^3.0.0",
+    "jsdom": "^11.7.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^5.0.5",
     "mocha-lcov-reporter": "^1.3.0",
     "mocha-typescript": "^1.1.12",
@@ -36,6 +38,7 @@
     "@types/browser-bunyan": "^0.4.3",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
+    "@types/jsonwebtoken": "^7.2.6",
     "@types/node": "^9.6.1",
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
@@ -52,6 +55,8 @@
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.2.1",
     "node-sass": "4.8.3",
     "path": "^0.12.7",
     "react": "^16.2.0",
