--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.1.4",
     "url-loader": "^1.0.1",
-    "webpack": "^4.5.0"
+    "webpack": "^4.5.0",
+    "webpack-merge": "^4.1.2"
   }
 }
