--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "frontendBoilerplate",
+  "name": "frontend_boilerplate",
   "version": "0.0.0",
   "description": "basic blank project setup. Hopefully saves you time configuring",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --extension .ts --extension .tsx mocha -r ts-node/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls",
-    "bundle": "webpack && npm run assetBundle",
-    "clean": "rm -rf ./dist",
-    "assetBundle": "cp ./server.js ./dist/ && cp -r ./src/testData ./dist/ && cp ./index.html ./dist && cp -r ./src/images ./dist/ && cp ./src/images/favicon.ico ./dist",
-    "lint": "tslint --force 'src/**/*.ts?' > ./tslint.err",
-    "serve": "npm run clean && npm run lint && npm run bundle && cat ./tslint.err && node ./dist/server.js",
-    "start": "npm run serve"
+    "bundle": "webpack --hot && npm run assetBundle",
+    "clean": "rimraf ./dist",
+    "assetBundle": "copyfiles ./server.js ./dist/ && copyfiles -r ./src/testData ./dist/ && copyfiles ./index.html ./dist && copyfiles -r ./src/images ./dist/ && copyfiles ./src/images/favicon.ico ./dist",
+    "lint": "tslint --force 'src/**/*.ts?'",
+    "serve": "npm run clean && npm run bundle && npm run lint && node ./dist/server.js",
+    "start": "npm run serve",
+    "test": "set NODE_ENV=TEST && nyc --extension .ts --extension .tsx mocha --require ts-node/register --require jsdom-global/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls"
   },
   "repository": {
     "type": "git",
@@ -23,38 +23,44 @@
   },
   "homepage": "https://github.com/darkdigitaldream/frontendBoilerplate#readme",
   "devDependencies": {
+    "copyfiles": "^2.0.0",
     "coveralls": "^3.0.0",
-    "mocha": "^4.0.1",
+    "jsdom": "^11.7.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.0.5",
     "mocha-lcov-reporter": "^1.3.0",
     "mocha-typescript": "^1.1.12",
-    "nyc": "^11.3.0"
+    "nyc": "^11.3.0",
+    "rimraf": "^2.6.2",
+    "webpack-cli": "^2.0.14"
   },
   "dependencies": {
     "@types/browser-bunyan": "^0.4.3",
-    "@types/es6-promise": "0.0.33",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
-    "@types/node": "^8.0.46",
+    "@types/jsonwebtoken": "^7.2.6",
+    "@types/node": "^9.6.1",
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.9",
-    "@types/react-router": "4.0.16",
+    "@types/react-router": "4.0.23",
     "@types/react-router-dom": "^4.2.0",
     "@types/react-router-redux": "^5.0.0",
-    "@types/webpack": "^3.8.1",
-    "awesome-typescript-loader": "^3.2.3",
+    "@types/webpack": "^4.1.3",
+    "awesome-typescript-loader": "^4.0.1",
     "browser-bunyan": "^1.2.1",
     "compression-webpack-plugin": "^1.1.3",
-    "css-loader": "0.28.7",
+    "css-loader": "0.28.11",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
-    "node-sass": "4.5.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.2.1",
+    "node-sass": "4.8.3",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-flexbox-grid": "^2.0.0",
     "react-redux": "^5.0.6",
     "react-router": "4.2.0",
     "react-router-dom": "^4.2.2",
@@ -64,13 +70,14 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.20.3",
     "swagger-ui": "^3.10.0",
-    "ts-node": "^4.0.2",
+    "ts-node": "^5.0.1",
     "tslint": "^5.7.0",
-    "typescript": "^2.6.2",
+    "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.1.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.6.0"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0",
+    "webpack-merge": "^4.1.2"
   }
 }
