--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
+    "graphiql": "^0.11.11",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.2.1",
