--- a/package.json
+++ b/package.json
@@ -1,14 +1,88 @@
 {
-  "name": "sharifyr-client",
+  "name": "frontend_boilerplate",
   "version": "0.0.0",
-  "description": "Bundler for sharifyr-client app",
+  "description": "basic blank project setup. Hopefully saves you time configuring",
+  "main": "index.js",
   "scripts": {
-    "build_app": "cd ./app && npm start && cd ./",
-    "bundle_electron": "cd ./electron && npm start && cd ./",
-    "bundle_web": "",
-    "start": "npm run build_app && npm run bundle_electron"
+    "clean": "rimraf ./dist",
+    "bundle": "copyfiles -f ./app/index.html ./dist && copyfiles -f ./app/src/images/* ./dist && copyfiles -f ./node/server.js ./dist",
+    "lint": "tslint --force 'src/**/*.ts?'",
+    "build": "npm run build-electron && npm run build-app",
+    "build-electron": "cd electron && tsc && cd ..",
+    "build-app": " cd app && webpack && cd ..",
+    "run-electron": "electron ./dist/electron/electron.js",
+    "run-node": "node ./dist/server.js",
+    "serve": "npm run clean && npm run lint && npm run bundle && npm run build && npm run run-node",
+    "start": "npm run serve",
+    "test": "set NODE_ENV=TEST && nyc --extension .ts --extension .tsx mocha --require ts-node/register --require jsdom-global/register ./test/*.ts && nyc report --reporter text-lcov --extension .ts --extension .tsx | coveralls"
   },
-  "repository": "",
-  "author": "KyleGalvin",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/darkdigitaldream/frontendBoilerplate.git"
+  },
+  "author": "Kyle Galvin",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/darkdigitaldream/frontendBoilerplate/issues"
+  },
+  "homepage": "https://github.com/darkdigitaldream/frontendBoilerplate#readme",
+  "devDependencies": {
+    "copyfiles": "^2.0.0",
+    "coveralls": "^3.0.0",
+    "electron": "^2.0.2",
+    "jsdom": "^11.7.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.0.5",
+    "mocha-lcov-reporter": "^1.3.0",
+    "mocha-typescript": "^1.1.12",
+    "nyc": "^11.3.0",
+    "rimraf": "^2.6.2",
+    "tslint": "^5.7.0",
+    "typescript": "^2.8.3",
+    "webpack-cli": "^2.0.14"
+  },
+  "dependencies": {
+    "@types/browser-bunyan": "^0.4.3",
+    "@types/express": "^4.0.39",
+    "@types/history": "^4.6.1",
+    "@types/jsonwebtoken": "^7.2.6",
+    "@types/node": "^9.6.1",
+    "@types/react": "^16.0.29",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^6.0.4",
+    "@types/react-router": "^4.0.29",
+    "@types/react-router-dom": "^4.2.0",
+    "@types/react-router-redux": "^5.0.0",
+    "@types/webpack": "^4.1.3",
+    "awesome-typescript-loader": "^4.0.1",
+    "browser-bunyan": "^1.2.1",
+    "compression-webpack-plugin": "^1.1.3",
+    "css-loader": "0.28.11",
+    "express": "^4.16.2",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
+    "history": "^4.7.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.2.1",
+    "node-sass": "4.8.3",
+    "path": "^0.12.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.4",
+    "redux": "3.7.2",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "2.2.0",
+    "sass-loader": "^6.0.6",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.20.3",
+    "swagger-ui": "^3.10.0",
+    "ts-node": "^5.0.1",
+    "uglifyjs-webpack-plugin": "^1.1.4",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0",
+    "webpack-merge": "^4.1.2"
+  }
 }
